frontend/test/should_fail/array_map_input_graph_element.grg
test array_map(ref a:array<Node>) {
	n:Node;	
	if {
		a.map<Edge>{value:Edge -> value}.empty();
	}	
}
